--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -4,3 +4,9 @@
 <h2><%= @portfolio_item.title %></h2>
 <p><%= @portfolio_item.subtitle %></p>
 <p><%= @portfolio_item.body %></p> 
+
+<h2>Technologies Used</h2>
+
+<% @portfolio_item.technologies.each do |t| %> 
+<p><%= t.name %></p>
+<% end%>
