--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -21,8 +21,6 @@
 
     <%= yield %>
 
-    <% if session[:source] %>
-      <p>Thanks for visiting me <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper("application") %>
   </body>
 </html>
