--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,16 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
 
-    <%= render "shared/nav", location: 'top' %>
+      <%= render "shared/application_nav"%>
 
-    <%= login_helper %>
-    
-    <%= yield %>
+      <%= login_helper %>
+      
+      <%= yield %>
 
-    <%= source_helper("application") %>
+      <%= source_helper("application") %>
+
+    </div>
   </body>
 </html>
