--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -19,13 +19,7 @@
     <!-- Start of nav -->
     <div class="container">
       <%= render 'shared/blog_nav' %>
-      <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
-        <div class="col-md-6 px-0">
-          <h1 class="display-4 font-italic">My Blogs</h1>
-          <p class="lead my-3">Come learn about my journey into the world of computer science and engineering</p>
-          <p class="lead mb-0"><%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %></p>
-        </div>
-      </div>
+      <%= render 'shared/blog_masthead' %>
     </div>      
     <!-- End of nav -->
 
@@ -63,14 +57,9 @@
 
       </div><!-- /.row -->
 
-        <!-- Start of footer -->
-          <footer class="blog-footer">
-            <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            <p>
-              <a href="#">Back to top</a>
-            </p>
-          </footer>
-        <!-- End of footer -->
+
+         <%= render 'shared/blog_footer' %> 
+
 
 
         <%= source_helper("blog") %>
