--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,12 +1,20 @@
-<h1>Show Page</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio_item.main_image %>      
+    </div>
+    <div class="col-md-5">
+      <h2><%= @portfolio_item.title %></h2>
+      <hr>
+      <p><%= @portfolio_item.subtitle %></p>
+      <p><%= @portfolio_item.body %></p> 
+      <hr>
+      <h3>Technologies Used</h3>
+      <% @portfolio_item.technologies.each do |t| %> 
+      <p><%= t.name %></p>
+      <% end%>      
 
-<%= image_tag @portfolio_item.main_image %>
-<h2><%= @portfolio_item.title %></h2>
-<p><%= @portfolio_item.subtitle %></p>
-<p><%= @portfolio_item.body %></p> 
+    </div>
+  </div>
+</div>
 
-<h2>Technologies Used</h2>
-
-<% @portfolio_item.technologies.each do |t| %> 
-<p><%= t.name %></p>
-<% end%>
