--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -60,7 +60,7 @@
 
          <%= render 'shared/blog_footer' %> 
 
-
+         <%= alerts %>
 
         <%= source_helper("blog") %>
     </main><!-- /.container -->
