--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -2,10 +2,10 @@
 
   <% if @portfolio_item.errors.any? %>
     <% @portfolio_item.errors.full_messages.each do |error| %>
-      <%= js add_gritter(error, title: "Matthew Nguyen Portfolio", sticky: false, :time => 3000) %>
+      <%= alert_generator error %>
     <% end %>
   <% end %>
-  
+
   <div class="row">
     <div class="col-md-6 ">
       <div class="form-group">
