--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,7 +46,7 @@ body {
 }
 
 .cover-container {
-  max-width: 42em;
+  max-width: 65em;
 }
 
 
@@ -93,7 +93,7 @@ body {
 }
 
 .inner {
-  width: 50rem;
+  width: 60rem;
 }
 
 /*
@@ -160,4 +160,17 @@ body {
 
 .app-footer {
   color: white;
+}
+
+.tech-news {
+  color:black;
+  margin: 20px;
+}
+
+.tech-news a{
+  color:green;
+}
+
+.tech-news > .card{
+  padding: 20px;
 }
