--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -4,13 +4,7 @@
     Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago
   </p>
 
-  <% if logged_in?(:site_admin) %>
-    <p class="blog-post-meta">
-      <%= link_to blog.status, toggle_status_blog_path(blog) %> /
-      <%= link_to 'Edit', edit_blog_path(blog) %> /
-      <%= link_to 'Delete Post', blog, method: :delete, data: { confirm: 'Are you sure?' } %>  
-    </p>
-  <% end %>
+  <%= render partial: 'blogs/admin_actions', locals: { blog: blog } %>
   
   <p>
     <%= blog.body %>
