--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,3 +1,23 @@
+<nav class="navbar navbar-expand-md navbar-light bg-light blog-nav">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  
+  <div class="container">
+    <%= link_to "Matthew Nguyen", root_path, class: 'navbar-brand' %>
+    <div class="collapse navbar-collapse" id="navBarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <%= nav_helper 'nav-link', 'li' %>
+        <%= login_helper "p-2 text-muted" %>
+      </ul>      
+    </div>
+  </div>
+</nav>
+
+
+
+
+<!-- 
 <div class="nav-scroller py-1 mb-2">
   <nav class="nav d-flex justify-content-between">
     <%= nav_helper  'nav-link', 'span' %>
@@ -5,3 +25,4 @@
   </nav>
 </div>
 
+ -->
