updated source tracking feature

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -62,7 +62,6 @@
 
          <%= alerts %>
 
-        <%= source_helper("blog") %>
-    </main><!-- /.container -->
+    </main>
   </body>
 </html>
