--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,18 +1,11 @@
 <div class="col-md-4">
   <div class="card mb-4 box-shadow" data-id="<%= portfolio_item.id %>">
-    <%= image_tag portfolio_img(portfolio_item.thumb_image.to_s, 'thumb') %>
+    <%= image_tag portfolio_img(portfolio_item.thumb_image.to_s, 'thumb'), width: '100%' %>
     <div class="card-body">
       <p class="card-text">
         <span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>
         <%= portfolio_item.subtitle %>
       </p>
-      <!-- <div class="d-flex justify-content-between align-items-center">
-        <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-          <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-        </div>
-        <small class="text-muted">9 mins</small>
-      </div> -->
     </div>
   </div>
 </div>
