implemented style changes for about and contact pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,13 +1,18 @@
-<h1>About Me</h1>
-<hr>
+<div class="app-card-container">
+  <div class="card">
+    <h1>About Me</h1>
+      <hr>
 
-<div class="row">
-  <div class="col-md-4">
-    <%= image_tag "profile.png", width: 200, alt: 'profile-pic' %>
-  </div>
-  <div class="col-md-8">
-    <p>With no hope in sight and a journey going nowhere I needed to feel alive once again. Living in the land of opportunity and even better Silicon Valley, why not make a life breaking decision that would alter yet enhance the rest of my life?</p>
+      <div class="row">
+      <div class="col-md-4">
+        <%= image_tag "profile.png", width: 200, alt: 'profile-pic', class: 'profile-img' %>
+      </div>
+      <div class="col-md-8">
+        <p>With no hope in sight and a journey going nowhere I needed to feel alive once again. Living in the land of opportunity and even better Silicon Valley, why not make a life breaking decision that would alter yet enhance the rest of my life?</p>
 
-    <p>For this reason I decided to focus my efforts...</p>
+        <p>For this reason I decided to focus my efforts...</p>
+      </div>
+    </div>  
   </div>
 </div>
+
