--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,17 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "5555555555" %></p>
-<p><%= number_to_currency "150" %></p>
-<p><%= number_to_percentage "80.4" %></p>
-<p><%= number_with_delimiter "2343" %></p>
+<div class="app-card-container">
+  <div class="card">
 
+    <h1>Would you like to work together?</h1>
 
+    <hr>
+    <div>
+      <h3>Address</h3>
+      <p>San Jose, California</p>
+      <h3>Phone</h3>
+      <p><%= number_to_phone "4084600029" %></p>
+      <h3>Email</h3>
+      <p><a href="mailto:matthewaknguyen@gmail.com?subject=PortfolioContact" "email me">Email Me</a></p>
+    </div>
+
+  </div> 
+</div>
