added buttons to about page for collapsable feature?

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,6 +11,51 @@
         <p>With no hope in sight and a journey going nowhere I needed to feel alive once again. Living in the land of opportunity and even better Silicon Valley, why not make a life breaking decision that would alter yet enhance the rest of my life?</p>
 
         <p>For this reason I decided to focus my efforts...</p>
+
+        <p>
+          <button
+            class='btn btn-primary'
+            type="button"
+            data-toggle="collapse"
+            data-target="#jobHistory"
+            aria-expanded='false'
+            aria-controller='jobHistory'
+          >
+            Job History
+          </button>
+
+          <button
+            class='btn btn-primary'
+            type="button"
+            data-toggle="collapse"
+            data-target="#education"
+            aria-expanded='false'
+            aria-controller='education'
+          >
+            Education
+          </button>
+
+        </p>
+        <p>
+
+          <div class="collapse" id="jobHistory">
+            <div class="card card-block">
+              Job 1
+            </div>
+            <div class="card card-block">
+              Job 2
+            </div>
+          </div>
+
+          <div class="collapse" id="education">
+            <div class="card card-block">
+              School 1
+            </div>
+            <div class="card card-block">
+              School 2
+            </div>
+          </div>
+        </p>
       </div>
     </div>  
   </div>
