--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,6 +6,25 @@
       <div class="row">
       <div class="col-md-4">
         <%= image_tag "profile.png", width: 200, alt: 'profile-pic', class: 'profile-img' %>
+
+        <div class="skills">
+          <% @skills.each do |skill| %>
+            <div class="skill">
+              <h4><%= skill.title %></h4>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-striped bg-warning"
+                  role="progressbar"
+                  aria-valuenow="<%= skill.percent_utilized %>"
+                  aria-valuemax="100"
+                  style="width: <%= skill.percent_utilized %>%"
+                ></div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+
+
       </div>
       <div class="col-md-8">
         <p>With no hope in sight and a journey going nowhere I needed to feel alive once again. Living in the land of opportunity and even better Silicon Valley, why not make a life breaking decision that would alter yet enhance the rest of my life?</p>
