--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,7 +5,7 @@
 
       <div class="row">
       <div class="col-md-4">
-        <%= image_tag "profile.png", width: 200, alt: 'profile-pic', class: 'profile-img' %>
+        <%= image_tag "Matthew.jpg", width: 200, alt: 'profile-pic', class: 'profile-img' %>
 
         <div class="skills">
           <% @skills.each do |skill| %>
@@ -24,12 +24,11 @@
           <% end %>
         </div>
 
-
       </div>
       <div class="col-md-8">
-        <p>With no hope in sight and a journey going nowhere I needed to feel alive once again. Living in the land of opportunity and even better Silicon Valley, why not make a life breaking decision that would alter yet enhance the rest of my life?</p>
+        <p>A full stack engineer with experience in Ruby on Rails, JavaScript, and Python  technologies to build an exceptional online presence. Eager to learn new languages, frameworks, and to take on challenges in constant desire of a results-oriented atmosphere. Astute ability in JavaScript for client and server side scripting (React/Redux/NodeJS) and always researching and studying new languages that are effective in modern culture. Works extremely well in team oriented settings and has copious amounts of enthusiasm to code.</p>
 
-        <p>For this reason I decided to focus my efforts...</p>
+        <p>Always seeking new opportunities and striving for the best. My best work is ahead of me and I hope that I can contribute my skills and knowledge to any company that is willing and happy to have me. </p>
 
         <p>
           <button
@@ -59,19 +58,38 @@
 
           <div class="collapse" id="jobHistory">
             <div class="card card-block">
-              Job 1
+              <p class="card-detail">
+                <span class="title">Cisco</span> - 
+                <span class="role">Software Engineer/DevOps</span> -
+                <span class="tech">React/Redux/Python/Django/REST</span>
+              </p>
+              <p class="card-detail">Feb 2018 - May 2018</p>
             </div>
             <div class="card card-block">
-              Job 2
+              <p class="card-detail">
+                <span class="title">TiVo</span> - 
+                <span class="role">Software Engineer</span> -
+                <span class="tech">Drupal/Salesforce/jQuery</span>
+              </p>
+              <p class="card-detail">Aug 2016 - Jun 2017</p>
+            </div>
+            <div class="card card-block">
+              <p class="card-detail">
+                <span class="title">Impressions</span> - 
+                <span class="role">Software Engineer</span> -
+                <span class="tech">React/Node.JS</span>
+              </p>
+              <p class="card-detail">Apr 2016 - Jun 2016</p>
             </div>
           </div>
 
           <div class="collapse" id="education">
             <div class="card card-block">
-              School 1
-            </div>
-            <div class="card card-block">
-              School 2
+              <p class="card-detail">
+                <span class="title">University of California, Santa Cruz</span> - 
+                <span class="role">Molecular and Celluar Biology</span> 
+              </p>
+              <p class="card-detail">Aug 2009 - Jun 2012</p>
             </div>
           </div>
         </p>
