--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,19 +20,22 @@
   <body>
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
 
-      <%= video_tag(
-          'data.webm',
-          id: "background",
-          autoplay: true,
-          loop: true,
-          muted: true,
-          poster: 'crypto2.png'
-        )
-        %>
+      <div id="background"> <!-- Use background image instead of video! -->
+        <% if false %>
+          <%= video_tag(
+            'data.webm',
+            id: "background",
+            autoplay: true,
+            loop: true,
+            muted: true,
+            poster: 'crypto2.png'
+          )
+          %>
+        <% end %>
+      </div>
 
       <%= render "shared/application_nav"%>
 
-      
       <%= yield %>
 
       <%= render 'shared/application_footer' %>
