--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,28 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light blog-nav">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+  <%= link_to "Matthew Nguyen", root_path, class: 'navbar-brand' %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   
   <div class="container">
-    <%= link_to "Matthew Nguyen", root_path, class: 'navbar-brand' %>
-    <div class="collapse navbar-collapse" id="navBarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
         <%= nav_helper 'nav-link', 'li' %>
-        <%= login_helper "p-2 text-muted" %>
+        <%= login_helper "nav-link" %>
       </ul>      
     </div>
   </div>
 </nav>
-
-
-
-
-<!-- 
-<div class="nav-scroller py-1 mb-2">
-  <nav class="nav d-flex justify-content-between">
-    <%= nav_helper  'nav-link', 'span' %>
-    <%= login_helper "p-2 text-muted" %>
-  </nav>
-</div>
-
- -->
