--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,30 +18,35 @@
   </head>
 
   <body>
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
 
-      <div id="background"> <!-- Use background image instead of video! -->
-        <% if false %>
-          <%= video_tag(
-            'data.webm',
-            id: "background",
-            autoplay: true,
-            loop: true,
-            muted: true,
-            poster: 'crypto2.png'
-          )
-          %>
-        <% end %>
+    <main role="main" class="container">
+
+      <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+        
+        <div id="background"> 
+          <% if false %>
+            <%= video_tag(
+              'data.webm',
+              id: "background",
+              autoplay: true,
+              loop: true,
+              muted: true,
+              poster: 'crypto2.png'
+            )
+            %>
+          <% end %>
+        </div>
+
+        <%= render "shared/application_nav"%>      
+
+        <%= yield %>
+
+        <%= render 'shared/application_footer' %>
+
+        <%= alerts %>
       </div>
 
-      <%= render "shared/application_nav"%>
+  </main>
 
-      <%= yield %>
-
-      <%= render 'shared/application_footer' %>
-
-      <%= alerts %>
-
-    </div>
   </body>
 </html>
