--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
 <main role="main" class="inner cover">
-  <h1 class="cover-heading">Welcome.</h1>
-  <p class="lead"><span class="element"></span></p>
-  <p class="lead">
-    <%= link_to "About Me", about_path, class: "btn btn-lg btn-secondary" %>
-  </p>
+  <div class="col-md-4">  
+    <h1 class="cover-heading">Welcome.</h1>
+    <p class="lead"><span class="element"></span></p>
+    <p class="lead">
+      <%= link_to "About Me", about_path, class: "btn btn-lg btn-secondary" %>
+    </p>
+  </div>
 </main>
 
