--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,9 +1,19 @@
 <header class="masthead mb-auto">
-  <div class="inner">
-    <h3 class="masthead-brand">Matthew Nguyen </h3>
-    <nav class="nav nav-masthead justify-content-center app-nav">
-      <%= nav_helper  'nav-link', 'span' %>
-      <%= login_helper 'nav-link' %>
-    </nav>
-  </div>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark app-nav">
+
+    <%= link_to "Matthew Nguyen", root_path, class: 'navbar-brand' %>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="container">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+          <%= nav_helper 'nav-link', 'li' %>
+          <%= login_helper "nav-link" %>
+        </ul>      
+      </div>
+    </div>
+</nav>
+
 </header>
