fixed footer issue for portfolio on mobile

--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -8,7 +8,7 @@
     
     <div class="container">
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav">
           <%= nav_helper 'nav-link', 'li' %>
           <%= login_helper "nav-link" %>
         </ul>      
