fixed container issues for typed.js and for tech news layouts

--- a/app/views/pages/tech_news.html.erb
+++ b/app/views/pages/tech_news.html.erb
@@ -1,4 +1,4 @@
-<main role="main" class="inner cover">
+<div>
   <h1 class="cover-heading">Tech News for Ruby On Rails</h1>
   <div class="row">
     <% @tweets.each do |tweet| %>
@@ -11,6 +11,4 @@
       </div>
     <% end %>
   </div>
-</main>
-
-
+</div>
