added new components for contact, changed blog masthead content, added real links to blogs sidebar

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,13 +4,24 @@
     <h1>Would you like to work together?</h1>
 
     <hr>
-    <div>
-      <h3>Address</h3>
-      <p>San Jose, California</p>
-      <h3>Phone</h3>
-      <p><%= number_to_phone "4084600029" %></p>
-      <h3>Email</h3>
-      <p><a href="mailto:matthewaknguyen@gmail.com?subject=PortfolioContact" "email me">Email Me</a></p>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Address</h3>
+        <p>San Jose, California</p>
+        <h3>Phone</h3>
+        <p><a href="4084600029"><%= number_to_phone "4084600029" %></a></p>
+        <h3>Email</h3>
+        <p><a href="mailto:matthewaknguyen@gmail.com?subject=PortfolioContact" "email me">Email Me</a></p>
+      </div>
+
+      <div class="col-md-6">
+        <h3>LinkedIn</h3>
+        <p><a href="https://www.linkedin.com/in/matthewaknguyen" target="_blank">linkedin.com/in/matthewaknguyen</a></p>
+        <h3>GitHub</h3>
+        <p><a href="https://www.github.com/tigerbombz" target="_blank">github.com/tigerbombz</a></p>
+        <h3>Portfolio</h3>
+        <p><a href="http://www.tigerbombz.com" target="_blank">My 1st Portfolio in React</a></p>
+      </div>
     </div>
 
   </div> 
