--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -16,9 +16,9 @@
   <div class="p-3">
     <h4 class="font-italic">Elsewhere</h4>
     <ol class="list-unstyled social-links">
-      <li><a href ='#'><%= fa_icon "github" %></a></li>
-      <li><a href ='#'><%= fa_icon "facebook" %></a></li>
-      <li><a href ='#'><%= fa_icon "linkedin" %></a></li>
+      <li><a href="http://www.tigerbombz.com" target="_blank"><%= fa_icon "user" %></a></li>
+      <li><a href="https://www.linkedin.com/in/matthewaknguyen" target="_blank"><%= fa_icon "linkedin" %></a></li>
+      <li><a href="https://www.github.com/tigerbombz" target="_blank"><%= fa_icon "github" %></a></li>
       
     </ol>
   </div>
