--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
   <div class="col-md-6 px-0">
     <h1 class="display-4 font-italic">My Blogs</h1>
-    <p class="lead my-3">Come learn about my journey into the world of computer science and engineering</p>
+    <p class="lead my-3">Come learn about my journey into the world of computer science and engineering. I am always thinking but I never really jot down my thoughts and ideas...this will be my personal journey. Built with Web Sockets for improved UX. Come chat with me.</p>
     <p class="lead mb-0">
       <span>
         <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %></p>
